--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -66,10 +66,11 @@ header .banner-text h1 {
 }
 header .banner-text h3 {
    font: 18px/1.9em 'librebaskerville-regular', serif;
-   color: #EBEEEE;
+   font-weight: bold;
+   color: #fff;
    margin: 0 auto;
    width: 70%;
-   text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
+   text-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
 }
 header .banner-text h3 span,
 header .banner-text h3 a {
@@ -140,7 +141,8 @@ header .scrolldown a:hover { color: #11ABB0; }
    left: 0;
    top: 0;
 }
-.opaque { background-color: #333; }
+.normal-header ul#nav li a {color: white}
+.opaque { background-color: white; }
 
 /* hide toggle button */
 #nav-wrap > a.mobile-btn { display: none; }
@@ -166,10 +168,11 @@ ul#nav li a {
 
    display: inline-block;
    padding: 8px 13px;
+   padding-bottom: 3px;
    line-height: 32px;
 	text-decoration: none;
    text-align: left;
-   color: #fff;
+   color: black;
 
 	-webkit-transition: color .2s ease-in-out;
 	-moz-transition: color .2s ease-in-out;
@@ -179,7 +182,7 @@ ul#nav li a {
 }
 
 ul#nav li a:active { background-color: transparent !important; }
-ul#nav li.current a { color: #F06000; }
+ul#nav li.current a { text-decoration: none; border-bottom: 5px solid #2196f3;  }
 
 
 /* ------------------------------------------------------------------ */
@@ -251,7 +254,7 @@ ul#nav li.current a { color: #F06000; }
    letter-spacing: 1px;
 }
 #resume h1 span {
-   border-bottom: 3px solid #11ABB0;
+   border-bottom: 3px solid #2196f3;
    padding-bottom: 6px;
 }
 #resume h3 {
@@ -639,7 +642,7 @@ call-to-action .button {
 /* ------------------------------------------------------------------ */
 
 #testimonials {
-   background: #1F1F1F url(../images/testimonials-bg.jpg) no-repeat center center;
+   background: #1F1F1F url(../images/testimonials-bg.png) no-repeat center center;
    background-size: cover !important;
 	-webkit-background-size: cover !important;
    background-attachment: fixed;
@@ -685,7 +688,8 @@ call-to-action .button {
    padding: 0;
    font-size: 24px;
    line-height: 48px;
-   color: #fff
+   color: #fff;
+   font-weight: bold;
 }
 #testimonials blockquote cite {
    display: block;
@@ -1008,6 +1012,7 @@ footer .social-links li:first-child { margin-left: 0; }
 .preline {
   white-space: pre-line;
   text-align: justify;
+  line-height: 22px
 }
 
 .cbp-ig-grid {
@@ -1026,7 +1031,7 @@ footer .social-links li:first-child { margin-left: 0; }
 .cbp-ig-grid li > div > span {
   display: block;
   height: 100%;
-  color: #60be86;
+  color: #2196f3;
 }
 
 .cbp-ig-icon {
