--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -159,8 +159,8 @@
    /* display menu panels */
 	#nav-wrap:target > ul#nav	{
 	   display: block;
-      padding: 30px 20px 48px 20px;
-      background: #1f2024;
+      padding: 10px;
+      background: whitesmoke;
       margin: 0 30px;
       clear: both;
    }
@@ -171,8 +171,6 @@
       margin: 0 auto; 
       padding: 0 4%;           
       text-align: left;
-      border-bottom: 1px solid #2D2E34;
-      border-bottom-style: dotted; 
    }
   
    ul#nav li a {  
